# ITI-CPP-Telemetry-Logging-System

./: .bazelrc  .gitignore  CMakeLists.txt  MODULE.bazel  README.md  log.txt
Utest/phase1/: BUILD.bazel  ConsoleSinkTest.cc  FileSinkTest.cc
Utest/phase2/: BUILD.bazel  FileTelemetrySourceImplTest.cc  SafeFileTest.cc  SafeSocketTest.cc  SocketTelemetrySourceImplTest.cc  TelemetryParserTest.cc
Utest/phase3/:  LogManagerBuilderTest.cpp  BUILD  LogFormatterTtest.cpp  LogSinkFactory_test.cpp  Parser_test.cpp  Policies_test.cpp  Test.cpp
Utest/phase4/: AsyncLogManagerTest.cpp  BUILD  RingBufferTest.cpp  ThreadPoolTest.cpp  ThreadSafeRingBufferTest.cpp
app/: CMakeLists.txt
app/phase1/: BUILD.bazel  main.cpp
app/phase2/: BUILD.bazel  main.cpp
app/phase3/: BUILD  Builder.cpp  Factor.cpp  a.out  constexpr.cpp  magic_enum.cpp  main.cpp  test_policies.cpp
app/phase4/: BUILD  generate_telemetry.sh  main.cpp  test_async_log_manager.cpp  test_thread_pool.cpp  test_threadsafe_buffer.cpp
app/phase5/: BUILD  main.cpp  telemetry_client.cpp  telemetry_service.cpp  vsomeip_client.json  vsomeip_service.json
app/phase6/: BUILD  config.json  main.cpp
docs/01-Core-Synchronous-Logging-Foundation/: README.md
docs/02-DataSources&SmartResourceManagement/: README.md
docs/03- Formatter & Threshold Logic/: README.md  uml.puml
docs/04- AsyncLogging /: README.md  uml.puml
docs/05-Telemetry-Over-Network/: README.md
docs/06-System-Wrap-Up/: README.md
fidl/: TelemetryService.fdepl  TelemetryService.fidl
fidl/src-gen/v1/commonapi/telemetry/: TelemetryService.hpp  TelemetryServiceProxy.hpp  TelemetryServiceProxyBase.hpp  TelemetryServiceSomeIPCatalog.json  TelemetryServiceSomeIPDeployment.cpp  TelemetryServiceSomeIPDeployment.hpp  TelemetryServiceSomeIPProxy.cpp  TelemetryServiceSomeIPProxy.hpp  TelemetryServiceSomeIPStubAdapter.cpp  TelemetryServiceSomeIPStubAdapter.hpp  TelemetryServiceStub.hpp  TelemetryServiceStubDefault.hpp
inc/AsyncLogging/: AsyncLogManager.hpp  BUILD  RingBuffer.hpp  ThreadPool.hpp  ThreadSafeRingBuffer.hpp
inc/Facade/: AppConfig.hpp  BUILD  TelemetryApp.hpp
inc/Formatter/: BUILD  Enums.hpp  LogFormatter.hpp  LogManagerBuilder.hpp  LogSinkFactory.hpp  Parser.hpp  Policies.hpp
inc/NetworkTelemetry/: TelemetryServiceImpl.hpp
inc/SmartDataHub/: BUILD.bazel  FileTelemetrySourceImpl.hpp  ITelemetrySource.hpp  SafeFile.hpp  SafeSocket.hpp  SocketTelemetrySourceImpl.hpp  SomeIPTelemetryClient.hpp  SomeIPTelemetrySourceImpl.hpp  TelemetryParser.hpp
inc/SmartDataHub/dia/: test.puml
inc/logging/: BUILD.bazel  ConsoleSinkImpl.hpp  FileSinkImpl.hpp  ILogSink.hpp  LogManager.hpp  LogMessage.hpp
src/: BUILD.bazel  CMakeLists.txt
src/AsyncLogging/: AsyncLogManager.cpp  ThreadPool.cpp
src/Facade/: AppConfig.cpp  BUILD  TelemetryApp.cpp
src/Formatter/: LogManagerBuilder.cpp  LogSinkFactory.cpp
src/NetworkTelemetry/: TelemetryServiceImpl.cpp
src/SmartDataHub/: FileTelemetrySourceImpl.cpp  SafeFile.cpp  SafeSocket.cpp  SocketTelemetrySourceImpl.cpp  SomeIPTelemetryClient.cpp  SomeIPTelemetrySourceImpl.cpp  TelemetryParser.cpp
src/logging/: ConsoleSinkImpl.cpp  FileSinkImpl.cpp  LogManager.cpp
test/phase1/: CMakeLists.txt  LogManagerTest.cc  LogMessageTest.cpp  README.md
