# src/BUILD.bazel

# ══════════════════════════════════════════════════════════════════════
# LOGGING LIBRARY (Phase 1)
# ══════════════════════════════════════════════════════════════════════

cc_library(
    name = "logging",
    srcs = [
        "logging/ConsoleSinkImpl.cpp",
        "logging/FileSinkImpl.cpp",
        "logging/LogManager.cpp",
    ],
    hdrs = glob(["../inc/logging/*.hpp"]),
    copts = ["-I$(GENDIR)/../inc/logging", "-Iinc/logging"],
    includes = ["../inc/logging"],
    visibility = ["//visibility:public"],
)

# ══════════════════════════════════════════════════════════════════════
# SMART DATA HUB LIBRARY (Phase 2)
# ══════════════════════════════════════════════════════════════════════

cc_library(
    name = "smart_data_hub",
    srcs = [
        "SmartDataHub/FileTelemetrySourceImpl.cpp",
        "SmartDataHub/SafeFile.cpp",
        "SmartDataHub/SafeSocket.cpp",
        "SmartDataHub/SocketTelemetrySourceImpl.cpp",
        "SmartDataHub/TelemetryParser.cpp",
    ],
    hdrs = glob(["../inc/SmartDataHub/*.hpp"]),
    copts = ["-I$(GENDIR)/../inc/SmartDataHub", "-Iinc/SmartDataHub"],
    includes = ["../inc/SmartDataHub"],
    visibility = ["//visibility:public"],
    deps = [":logging"],
)