load("@rules_cc//cc:defs.bzl", "cc_library")

# ══════════════════════════════════════════════════════════════════════
# LOGGING LIBRARY (Phase 1)
# ══════════════════════════════════════════════════════════════════════

cc_library(
    name = "logging",
    srcs = [
        "logging/ConsoleSinkImpl.cpp",
        "logging/FileSinkImpl.cpp",
        "logging/LogManager.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//inc/logging:logging_hdrs",
    ],
)

# ══════════════════════════════════════════════════════════════════════
# SMART DATA HUB LIBRARY (Phase 2)
# ══════════════════════════════════════════════════════════════════════

cc_library(
    name = "smart_data_hub",
    srcs = [
        "SmartDataHub/FileTelemetrySourceImpl.cpp",
        "SmartDataHub/SafeFile.cpp",
        "SmartDataHub/SafeSocket.cpp",
        "SmartDataHub/SocketTelemetrySourceImpl.cpp",
        "SmartDataHub/TelemetryParser.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":logging",
        "//inc/SmartDataHub:smart_data_hub_hdrs",
    ],
)

# ══════════════════════════════════════════════════════════════════════
# FORMATTER (Phase 3)
# ══════════════════════════════════════════════════════════════════════

cc_library(
    name = "formatter",
    srcs = [
        "Formatter/LogManagerBuilder.cpp",
        "Formatter/LogSinkFactory.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":logging",
        "//inc/Formatter:formatter_hdrs",
    ],
)

# ══════════════════════════════════════════════════════════════════════
# ASYNC LOGGING (Phase 4)
# ══════════════════════════════════════════════════════════════════════

cc_library(
    name = "async_logging",
    srcs = [
        "AsyncLogging/AsyncLogManager.cpp",
        "AsyncLogging/ThreadPool.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":logging",
        "//inc/AsyncLogging:async_logging_hdrs",
    ],
)

# ══════════════════════════════════════════════════════════════════════
# VSOMEIP TELEMETRY (Phase 5)
# ══════════════════════════════════════════════════════════════════════

cc_library(
    name = "vsomeip_telemetry",
    srcs = [
        "SmartDataHub/SomeIPTelemetryClient.cpp",
        "SmartDataHub/SomeIPTelemetrySourceImpl.cpp",
    ],
    visibility = ["//visibility:public"],
    copts = ["-I/usr/local/include"],
    deps = [
        "//inc/SmartDataHub:smart_data_hub_hdrs",
    ],
    linkopts = [
        "-L/usr/local/lib",
        "-lvsomeip3",
        "-lvsomeip3-cfg",
        "-lpthread",
    ],
)