# Utest/phase2/BUILD.bazel

cc_test(
    name = "smart_data_hub_tests",
    srcs = [
        "SafeFileTest.cc",
        "SafeSocketTest.cc",
        "FileTelemetrySourceImplTest.cc",
        "SocketTelemetrySourceImplTest.cc",
        "TelemetryParserTest.cc",
    ],
    deps = [
        "//src:smart_data_hub",
    "@googletest//:gtest_main",
    ],
)

# Individual tests (for running separately)
cc_test(
    name = "safe_file_test",
    srcs = ["SafeFileTest.cc"],
    deps = [
        "//src:smart_data_hub",
    "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "safe_socket_test",
    srcs = ["SafeSocketTest.cc"],
    deps = [
        "//src:smart_data_hub",
    "@googletest//:gtest_main",
        ],
)

cc_test(
    name = "file_telemetry_source_test",
    srcs = ["FileTelemetrySourceImplTest.cc"],
    deps = [
        "//src:smart_data_hub",
    "@googletest//:gtest_main",    ],
)

cc_test(
    name = "socket_telemetry_source_test",
    srcs = ["SocketTelemetrySourceImplTest.cc"],
    deps = [
        "//src:smart_data_hub",
    "@googletest//:gtest_main",    ],
)

cc_test(
    name = "telemetry_parser_test",
    srcs = ["TelemetryParserTest.cc"],
    deps = [
        "//src:smart_data_hub",
    "@googletest//:gtest_main",    ],
)