load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "smart_data_hub_hdrs",
    hdrs = [
        "FileTelemetrySourceImpl.hpp",
        "ITelemetrySource.hpp",
        "SafeFile.hpp",
        "SafeSocket.hpp",
        "SocketTelemetrySourceImpl.hpp",
        "TelemetryParser.hpp",
        # Phase 5: vSOME/IP Telemetry
        "SomeIPTelemetryClient.hpp",
        "SomeIPTelemetrySourceImpl.hpp",
    ],
    include_prefix = "",
    strip_include_prefix = "",
    includes = ["."],  # Adds inc/SmartDataHub to include path
)