load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "logging_hdrs",
    hdrs = [
        "ConsoleSinkImpl.hpp",
        "FileSinkImpl.hpp",
        "ILogSink.hpp",
        "LogManager.hpp",
        "LogMessage.hpp",
    ],
    include_prefix = "",
    strip_include_prefix = "",
    includes = ["."],  # Adds inc/logging to include path
)